Рефакторинг user_security_fulfil -> user_target
